[tool.poetry]
name = "repl-nix-g4"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_g4"}]

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
questionary = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
